@@ -33,6 +33,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - Fixed a UnicodeDecodeError that could occur in the web admin interface
+      if 'text' valued attributes have unicode values.  (LP: #1397170)
+
     - We now catch the NotAMemberError exception thrown if an authenticated
       unsubscribe is submitted from the user options page for a nonmember.
       (LP: #1390653)
